# AC_Lab1

./: .gitignore  CMakeLists.txt  all_avignon.sh  cmake.sh  fluid.cpp  fluid.sh  funciones_fisicas.cpp  funciones_fisicas.hpp  lectura_archivo.cpp  lectura_archivo.hpp  main.cpp  make.sh  progargs.cpp  progargs.hpp
bash_scripts/: all_avignon.sh  cmake.sh  compila.sh  compile_old.sh  comprobador_trazas.sh  ejecuta.sh  en_claro_salidas.sh  execution.sh  fluid.sh  info.md  make.sh  pruebas_rendimiento.sh
fluid/: CMakeLists.txt  fluid.cpp  fluid.hpp
ftest/: ftest.cpp  functional.sh  main.cpp
herramientas/: 2_particulas.cpp  lectura.cpp  lectura_traza.cpp
sim/: Bloques.hpp  CMakeLists.txt  Malla.cpp  Malla.hpp  calculadora.cpp  calculadora.hpp  constantes.cpp  constantes.hpp  funciones_fisicas.cpp  funciones_fisicas.hpp  lectura_archivo.cpp  lectura_archivo.hpp  malla.cpp  malla.hpp  particle.cpp  particle.hpp  progargs.cpp  progargs.hpp  simulacion.cpp  simulacion.hpp  vector_3d.cpp  vector_3d.hpp
traza/: orden.md
traza/claro-large/: acctransf-base-1.txt  acctransf-base-2.txt  acctransf-base-3.txt  acctransf-base-4.txt  acctransf-base-5.txt  boundint-base-1.txt  boundint-base-2.txt  boundint-base-3.txt  boundint-base-4.txt  boundint-base-5.txt  densinc-base-1.txt  densinc-base-2.txt  densinc-base-3.txt  densinc-base-4.txt  densinc-base-5.txt  denstransf-base-1.txt  denstransf-base-2.txt  denstransf-base-3.txt  denstransf-base-4.txt  denstransf-base-5.txt  enclarece.sh  initacc-base-1.txt  initacc-base-2.trz  initacc-base-3.trz  initacc-base-4.trz  initacc-base-5.trz  lectura_traza  motion-base-1.trz  motion-base-2.trz  motion-base-3.trz  motion-base-4.trz  motion-base-5.trz  partcol-base-1.txt  partcol-base-2.txt  partcol-base-3.txt  partcol-base-4.txt  partcol-base-5.txt  repos-base-1.txt  repos-base-2.txt  repos-base-3.txt  (+2 more)
traza/claro-small/: acctransf-base-1.txt  acctransf-base-2.txt  acctransf-base-3.txt  acctransf-base-4.txt  acctransf-base-5.txt  boundint-base-1.txt  boundint-base-2.txt  boundint-base-3.txt  boundint-base-4.txt  boundint-base-5.txt  densinc-base-1.txt  densinc-base-2.txt  densinc-base-3.txt  densinc-base-4.txt  densinc-base-5.txt  denstransf-base-1.txt  denstransf-base-2.txt  denstransf-base-3.txt  denstransf-base-4.txt  denstransf-base-5.txt  enclarece.sh  initacc-base-1.txt  initacc-base-2.trz  initacc-base-3.trz  initacc-base-3.txt  initacc-base-4.trz  initacc-base-5.trz  initacc-base-5.txt  motion-base-1.trz  motion-base-1.txt  motion-base-2.trz  motion-base-3.trz  motion-base-3.txt  motion-base-4.trz  motion-base-4.txt  motion-base-5.trz  motion-base-5.txt  partcol-base-1.txt  partcol-base-2.txt  partcol-base-3.txt  (+7 more)
traza/large/: acctransf-base-1.trz  acctransf-base-2.trz  acctransf-base-3.trz  acctransf-base-4.trz  acctransf-base-5.trz  boundint-base-1.trz  boundint-base-2.trz  boundint-base-3.trz  boundint-base-4.trz  boundint-base-5.trz  densinc-base-1.trz  densinc-base-2.trz  densinc-base-3.trz  densinc-base-4.trz  densinc-base-5.trz  denstransf-base-1.trz  denstransf-base-2.trz  denstransf-base-3.trz  denstransf-base-4.trz  denstransf-base-5.trz  initacc-base-2.trz  motion-base-1.trz  motion-base-2.trz  motion-base-3.trz  motion-base-4.trz  motion-base-5.trz  partcol-base-1.trz  partcol-base-2.trz  partcol-base-3.trz  partcol-base-4.trz  partcol-base-5.trz  repos-base-3.trz  repos-base-4.trz  repos-base-5.trz
traza/small/: acctransf-base-1.trz  acctransf-base-2.trz  acctransf-base-3.trz  acctransf-base-4.trz  acctransf-base-5.trz  boundint-base-1.trz  boundint-base-2.trz  boundint-base-3.trz  boundint-base-4.trz  boundint-base-5.trz  densinc-base-2.trz  densinc-base-3.trz  densinc-base-4.trz  densinc-base-5.trz  denstransf-base-2.trz  (+17 more)
trazas/: acctransf-base-2.trz  acctransf-base-3.trz  acctransf-base-4.trz  acctransf-base-5.trz  boundint-base-2.trz  boundint-base-3.trz  boundint-base-4.trz  boundint-base-5.trz  densinc-base-2.trz  densinc-base-3.trz  densinc-base-4.trz  densinc-base-5.trz  denstransf-base-2.trz  denstransf-base-3.trz  denstransf-base-4.trz  denstransf-base-5.trz  initacc-base-3.trz  initacc-base-4.trz  motion-base-2.trz  motion-base-3.trz  motion-base-4.trz  motion-base-5.trz  partcol-base-2.trz  partcol-base-3.trz  partcol-base-4.trz  partcol-base-5.trz  repos-base-2.trz  repos-base-5.trz
utest/: CMakeLists.txt  calculadora_test.cpp  etapas_simulacion_test.cpp  fluid_test.cpp  main.cpp  malla_test.cpp  progargs_test.cpp  simulacion_test.cpp  tools_trazas.cpp  tools_trazas.hpp  vector3d_test.cpp
